add alt text to images

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Sign-up form</title>
 </head>
 <body>
-    <img src="./marek-piwnicki-HghkWDMuHx4-unsplash.jpg">
-    <img src="./odin-lined.png">
+    <img src="./marek-piwnicki-HghkWDMuHx4-unsplash.jpg" alt="Mountain backdrop">
+    <img src="./odin-lined.png" alt="Odin project logo, Odin's head">
 </body>
 </html>
