--- a/index.html
+++ b/index.html
@@ -5,9 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Sign-up form</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap');
+      </style>
 </head>
 <body>
-    <img src="./marek-piwnicki-HghkWDMuHx4-unsplash.jpg" alt="Mountain backdrop">
-    <img src="./odin-lined.png" alt="Odin project logo, Odin's head">
+    <div class="imageLogo">
+        <img class="image" src="./marek-piwnicki-HghkWDMuHx4-unsplash.jpg" alt="Mountain backdrop">
+        <img class="logo" src="./odin-lined.png" alt="Odin's head">
+    </div>
+    <div class="rightSide">
+        <div class="top">
+            <p>This is not a real online service! You know you need 
+                something like this in your life to help you realize your
+                deepest dreams. <br> You know you want to.
+            </p>
+        </div>
+        <div class="middle">
+            <div>Let's do this!</div>
+            <div class="forms">
+
+            </div>
+        </div>
+        <div class="bottom">
+            
+        </div>
+    </div>
 </body>
 </html>
+
+<!-- 
+left third is image with odin banner on top third of the image
+top short message
+middle 2 x 3 form (flexbox?) with message above
+bottom create account button, with login link below 
+maybe flexbox the body for the layout of the image and forms
+
+-->
