--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       </style>
 </head>
 <body>
-    <div class="imageLogo">
+    <div class="leftSide">
         <img class="image" src="./marek-piwnicki-HghkWDMuHx4-unsplash.jpg" alt="Mountain backdrop">
         <img class="logo" src="./odin-lined.png" alt="Odin's head">
     </div>
