--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Sign-up form</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
       </style>
 </head>
 <body>
@@ -20,33 +20,26 @@
         <div class="top">
             <p>This is not a real online service! You know you need 
                 something like this in your life to help you realize your
-                deepest dreams. <br> You <em>know</em> you want to.
-            </p>
+                deepest dreams.</p> <p> You <em>know</em> you want to.</p>
+            
         </div>
         <div class="middle">
-            <div>Let's do this!</div>
-            <div class="forms">
+            <h2>Let's do this!</h2>
               <form action="" method="post">
-                <div class="line">
-                <label for="FN">FIRST NAME</label>
-                <input type="text" name="" id="FN">
-                <label for="LN">LAST NAME</label>
-                <input type="text" name="" id="LN">
+                <div class="forms">
+                    <label for="FN">FIRST NAME</label>
+                    <label for="LN">LAST NAME</label>
+                    <input type="text" name="" id="FN">
+                    <input type="text" name="" id="LN">
+                    <label for="EMAIL">EMAIL</label>
+                    <label for="PHONE">PHONE NUMBER</label>
+                    <input type="email" name="" id="EMAIL">
+                    <input type="tel" name="" id="PHONE">
+                    <label for="PW">PASSWORD</label>
+                    <label for="CONFIRM">CONFIRM PASSWORD</label>
+                    <input type="password" name="" id="PW">
+                    <input type="password" name="" id="CONFIRM">
                 </div>
-                <div class="line">
-                <label for="EMAIL">EMAIL</label>
-                <input type="email" name="" id="EMAIL">
-                <label for="PHONE">PHONE NUMBER</label>
-                <input type="tel" name="" id="PHONE">
-                </div>
-                <div class="line">
-                <label for="PW">PASSWORD</label>
-                <input type="password" name="" id="PW">
-                <label for="CONFIRM">CONFIRM PASSWORD</label>
-                <input type="password" name="" id="CONFIRM">
-                </div>
-             
-            </div>
         </div>
         <div class="bottom">
             <button>Create account</button>
